--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.7",
+    "mongoose": "^5.1.0",
     "yargs": "^4.7.1"
   }
 }
